# easyTrip

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: planner_endpoints.py
app/cognitive_service/agent/: manage_calendar_action.py  share_plan_action.py  test_agent.py  travel_conversation_agent.py  travel_place_agent.py  travel_plan_agent.py  travel_search_agent.py  travel_search_summary_agent.py  trip_plan_action_agent.py
app/cognitive_service/agent_core/: graph_condition.py  graph_event.py  graph_node.py  graph_state.py  manage_graph.py
app/cognitive_service/agent_langgraph/: agent_condition.py  agent_graph.py  agent_graph_event.py  agent_node.py  agent_playground.py  agent_router.py  agent_state.py  graph_loader.py
app/cognitive_service/agent_llm/: llm_models.py
app/cognitive_service/agent_parser/: extract_travel_place_parser.py  extract_travel_plan_parser.py  llm_json_parser.py  plan_intent_parser.py  supervisor_prompt_parser.py  travel_conversation_json_parser.py
app/cognitive_service/agent_prompt/: intent_prompt_parser.py  supervisor_prompt_parser.py
app/core/: config.py
app/models/: travel_plan.py
app/schemes/: agent_scheme.py  calendar_scheme.py  chat_schemes.py
frontend/: easy_trip_streamlit.py
frontend/chat_api/: trip_api_constant.py
frontend/client_constant/: trip_api_constant.py  trip_plan_client.py
frontend/ui_component/: chat_history_ui.py
resources/: gasman5730_github_link.txt
shared/: datetime_util.py  event_constant.py  format_util.py
sqllite/: trip_plan.db
tmp/share_html/: plan_test-session-123.html
(+25 files in other folders)
