[tool.poetry]
name = "easytrip"
version = "0.1.0"
description = "ai trip planner project"
authors = ["moonshot <moonshot5730@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
langchain = "^0.3.25"
fastapi = "^0.115.12"
streamlit = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
