[tool.poetry]
name = "easytrip"
version = "0.1.0"
description = "ai trip planner project"
authors = ["moonshot <moonshot5730@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
langchain = "^0.3.25"
fastapi = "^0.115.12"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"
pydantic = "^2.11.7"
uvicorn = "^0.34.3"
pydantic-settings = "^2.9.1"
requests = "^2.32.4"
black = "^25.1.0"
isort = "^6.0.1"
langchain-openai = "^0.3.23"
google-genai = "^1.20.0"
langchain-google-genai = "^2.1.5"
sseclient = "^0.0.27"
graph-builder = "^0.2.0"
langgraph = "^0.4.8"
langchain-tavily = "^0.2.3"
tavily-python = "^0.7.7"
markdown2 = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
